--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -20,63 +20,8 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [14/Jun/2023 10:12:11] \"GET / HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 325ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Jun/2023 10:12:47] \"POST /upload HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 67ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Jun/2023 10:13:08] \"POST /upload HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 65ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Jun/2023 10:13:27] \"POST /upload HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 105ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [14/Jun/2023 10:13:52] \"POST /upload HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [15/Jun/2023 10:47:55] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [15/Jun/2023 10:47:55] \"GET /static/style.css HTTP/1.1\" 404 -\n"
      ]
     }
    ],
@@ -89,7 +34,7 @@
     "from tensorflow.keras.models import load_model\n",
     "\n",
     "# Initialize Flask application\n",
-    "app = Flask(__name__)\n",
+    "app = Flask(__name__, static_url_path='/static')\n",
     "\n",
     "# Load the skin cancer classifier model\n",
     "model = load_model('models/imageclassifier.h5')\n",
