--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,9 +19,7 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [15/Jun/2023 10:47:55] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [15/Jun/2023 10:47:55] \"GET /static/style.css HTTP/1.1\" 404 -\n"
+      "Press CTRL+C to quit\n"
      ]
     }
    ],
