--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,9 +19,7 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [19/Jun/2023 09:51:44] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/Jun/2023 09:51:44] \"GET /templates/static/style.css HTTP/1.1\" 404 -\n"
+      "Press CTRL+C to quit\n"
      ]
     }
    ],
@@ -34,7 +32,7 @@
     "from tensorflow.keras.models import load_model\n",
     "\n",
     "# Initialize Flask application\n",
-    "app = Flask(__name__, static_url_path='/templates/static')\n",
+    "app = Flask(__name__, static_url_path='/static/style.css?version=123')\n",
     "\n",
     "# Load the skin cancer classifier model\n",
     "model = load_model('models/imageclassifier.h5')\n",
