--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
     "from tensorflow.keras.models import load_model\n",
     "\n",
     "# Initialize Flask application\n",
-    "app = Flask(__name__, static_url_path='/static/style.css?version=123')\n",
+    "app = Flask(__name__, static_url_path='/static')\n",
     "\n",
     "# Load the skin cancer classifier model\n",
     "model = load_model('models/imageclassifier.h5')\n",
