--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,9 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [27/Jun/2023 12:37:28] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Jun/2023 12:37:28] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [27/Jun/2023 12:37:28] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 188ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [27/Jun/2023 12:37:49] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from flask import Flask, render_template, request\n",
@@ -81,7 +116,7 @@
     "        # Remove the uploaded file\n",
     "        os.remove(filepath)\n",
     "\n",
-    "        return f'Predicted label: {predicted_label}'\n",
+    "        return f'{predicted_label}'\n",
     "\n",
     "    return 'Invalid file', 400\n",
     "\n",
