--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,23 +20,39 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [27/Jun/2023 12:37:28] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [27/Jun/2023 12:37:28] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [27/Jun/2023 12:37:28] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
+      "127.0.0.1 - - [08/Jul/2023 07:06:09] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [08/Jul/2023 07:06:10] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [08/Jul/2023 07:06:11] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [08/Jul/2023 07:06:11] \"GET /favicon.ico HTTP/1.1\" 404 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 188ms/step\n"
+      "1/1 [==============================] - 3s 3s/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [27/Jun/2023 12:37:49] \"POST /predict HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [08/Jul/2023 07:06:31] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 72ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Jul/2023 07:07:22] \"POST /predict HTTP/1.1\" 200 -\n",
+      "No traceback available to show.\n"
      ]
     }
    ],
@@ -53,7 +69,7 @@
     "\n",
     "# Load the skin cancer classifier model\n",
     "model = load_model('models/imageclassifier.h5')\n",
-    "categories = ['basal cell carcinoma', 'melanoma', 'squamous cell carcinoma']\n",
+    "categories = ['basal cell carcinoma', 'melanoma', 'squamous cell carcinoma','Not Cancer']\n",
     "\n",
     "# Define allowed file extensions\n",
     "ALLOWED_EXTENSIONS = {'jpg', 'jpeg', 'png'}\n",
