--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,39 +20,85 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [08/Jul/2023 07:06:09] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [08/Jul/2023 07:06:10] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [08/Jul/2023 07:06:11] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [08/Jul/2023 07:06:11] \"GET /favicon.ico HTTP/1.1\" 404 -\n"
+      "127.0.0.1 - - [13/Jul/2023 08:02:13] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [13/Jul/2023 08:02:14] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [13/Jul/2023 08:02:14] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [13/Jul/2023 08:02:16] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [13/Jul/2023 08:02:16] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [13/Jul/2023 08:02:16] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 3s 3s/step\n"
+      "1/1 [==============================] - 0s 358ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [08/Jul/2023 07:06:31] \"POST /predict HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [13/Jul/2023 08:02:30] \"POST /predict HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 72ms/step\n"
+      "1/1 [==============================] - 0s 65ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [08/Jul/2023 07:07:22] \"POST /predict HTTP/1.1\" 200 -\n",
-      "No traceback available to show.\n"
+      "127.0.0.1 - - [13/Jul/2023 08:02:46] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 62ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Jul/2023 08:03:04] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 106ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Jul/2023 08:03:24] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [13/Jul/2023 08:03:42] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [13/Jul/2023 08:03:43] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [13/Jul/2023 08:03:43] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 81ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Jul/2023 08:03:52] \"POST /predict HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -69,7 +115,7 @@
     "\n",
     "# Load the skin cancer classifier model\n",
     "model = load_model('models/imageclassifier.h5')\n",
-    "categories = ['basal cell carcinoma', 'melanoma', 'squamous cell carcinoma','Not Cancer']\n",
+    "allowed_classes = ['basal cell carcinoma', 'melanoma', 'squamous cell carcinoma']\n",
     "\n",
     "# Define allowed file extensions\n",
     "ALLOWED_EXTENSIONS = {'jpg', 'jpeg', 'png'}\n",
@@ -98,8 +144,11 @@
     "    preprocessed_image = preprocess_image(image)\n",
     "    preprocessed_image = np.expand_dims(preprocessed_image, axis=0)\n",
     "    prediction = model.predict(preprocessed_image)\n",
-    "    predicted_label = categories[np.argmax(prediction)]\n",
-    "    return predicted_label\n",
+    "    predicted_label = np.argmax(prediction)\n",
+    "    if allowed_classes[predicted_label] in allowed_classes:\n",
+    "        return allowed_classes[predicted_label]\n",
+    "    else:\n",
+    "        return 'Error: Image does not belong to skin cancer class. '\n",
     "\n",
     "\n",
     "@app.route('/', methods=['GET'])\n",
