--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -98,7 +98,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [13/Jul/2023 08:03:52] \"POST /predict HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [13/Jul/2023 08:03:52] \"POST /predict HTTP/1.1\" 200 -\n",
+      "No traceback available to show.\n"
      ]
     }
    ],
