--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -19,87 +19,7 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [13/Jul/2023 08:02:13] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [13/Jul/2023 08:02:14] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [13/Jul/2023 08:02:14] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [13/Jul/2023 08:02:16] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [13/Jul/2023 08:02:16] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [13/Jul/2023 08:02:16] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 358ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [13/Jul/2023 08:02:30] \"POST /predict HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 65ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [13/Jul/2023 08:02:46] \"POST /predict HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 62ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [13/Jul/2023 08:03:04] \"POST /predict HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 106ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [13/Jul/2023 08:03:24] \"POST /predict HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [13/Jul/2023 08:03:42] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [13/Jul/2023 08:03:43] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [13/Jul/2023 08:03:43] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 81ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [13/Jul/2023 08:03:52] \"POST /predict HTTP/1.1\" 200 -\n",
-      "No traceback available to show.\n"
+      "Press CTRL+C to quit\n"
      ]
     }
    ],
@@ -115,7 +35,7 @@
     "app = Flask(__name__, static_url_path='/static')\n",
     "\n",
     "# Load the skin cancer classifier model\n",
-    "model = load_model('models/imageclassifier.h5')\n",
+    "model = load_model('models/imageclassifiers.h5')\n",
     "allowed_classes = ['basal cell carcinoma', 'melanoma', 'squamous cell carcinoma']\n",
     "\n",
     "# Define allowed file extensions\n",
@@ -145,11 +65,10 @@
     "    preprocessed_image = preprocess_image(image)\n",
     "    preprocessed_image = np.expand_dims(preprocessed_image, axis=0)\n",
     "    prediction = model.predict(preprocessed_image)\n",
-    "    predicted_label = np.argmax(prediction)\n",
-    "    if allowed_classes[predicted_label] in allowed_classes:\n",
-    "        return allowed_classes[predicted_label]\n",
-    "    else:\n",
-    "        return 'Error: Image does not belong to skin cancer class. '\n",
+    "    predicted_label_index = np.argmax(prediction)\n",
+    "    predicted_label = allowed_classes[predicted_label_index]\n",
+    "    \n",
+    "    return predicted_label if predicted_label in allowed_classes else 'Error: Image does not belong to a skin cancer class.'\n",
     "\n",
     "\n",
     "@app.route('/', methods=['GET'])\n",
