--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,51 +20,66 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [15/Jul/2023 13:03:22] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [15/Jul/2023 13:03:23] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [15/Jul/2023 13:03:23] \"GET /static/js/main.js HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [16/Jul/2023 23:27:45] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [16/Jul/2023 23:27:46] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [16/Jul/2023 23:27:47] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [16/Jul/2023 23:27:48] \"GET /favicon.ico HTTP/1.1\" 404 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 189ms/step\n"
+      "1/1 [==============================] - 2s 2s/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [15/Jul/2023 13:03:57] \"POST /predict HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [16/Jul/2023 23:29:17] \"POST /predict HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 67ms/step\n"
+      "1/1 [==============================] - 0s 49ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [15/Jul/2023 13:06:14] \"POST /predict HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [16/Jul/2023 23:29:39] \"POST /predict HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 73ms/step\n"
+      "1/1 [==============================] - 0s 51ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [15/Jul/2023 13:06:36] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [16/Jul/2023 23:29:48] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 82ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [16/Jul/2023 23:30:09] \"POST /predict HTTP/1.1\" 200 -\n",
       "No traceback available to show.\n"
      ]
     }
