--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,66 +20,23 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [16/Jul/2023 23:27:45] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [16/Jul/2023 23:27:46] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [16/Jul/2023 23:27:47] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [16/Jul/2023 23:27:48] \"GET /favicon.ico HTTP/1.1\" 404 -\n"
+      "127.0.0.1 - - [19/Jul/2023 16:16:11] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [19/Jul/2023 16:16:12] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [19/Jul/2023 16:16:12] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 2s 2s/step\n"
+      "1/1 [==============================] - 3s 3s/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [16/Jul/2023 23:29:17] \"POST /predict HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 49ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [16/Jul/2023 23:29:39] \"POST /predict HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 51ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [16/Jul/2023 23:29:48] \"POST /predict HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 82ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [16/Jul/2023 23:30:09] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [19/Jul/2023 16:16:35] \"POST /predict HTTP/1.1\" 200 -\n",
       "No traceback available to show.\n"
      ]
     }
@@ -97,7 +54,7 @@
     "\n",
     "# Load the skin cancer classifier model\n",
     "model = load_model('models/imageclassifiers.h5')\n",
-    "allowed_classes = ['basal cell carcinoma', 'melanoma', 'squamous cell carcinoma']\n",
+    "allowed_classes = ['actinic keratosis','animal','basal cell carconima', 'melanoma','nevus','normal skin','pigmented benign keretosis','plants', 'squamous cell carcinoma','vascular lesion']\n",
     "\n",
     "# Define allowed file extensions\n",
     "ALLOWED_EXTENSIONS = {'jpg', 'jpeg', 'png'}\n",
