--- a/skin.ipynb
+++ b/skin.ipynb
@@ -193,7 +193,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ADEBOSS\\AppData\\Local\\Temp\\ipykernel_4332\\2228248080.py:4: DeprecationWarning: 'imghdr' is deprecated and slated for removal in Python 3.13\n",
+      "  import imghdr\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import os\n",
@@ -210,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
