--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,24 +20,168 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [19/Jul/2023 16:16:11] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [19/Jul/2023 16:16:12] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [19/Jul/2023 16:16:12] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
+      "127.0.0.1 - - [28/Jul/2023 14:57:00] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 14:57:07] \"GET /static/js/main.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 14:57:07] \"GET /static/css/main.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 14:57:08] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:00:37] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:00:38] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:00:38] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 3s 3s/step\n"
+      "1/1 [==============================] - 1s 1s/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [19/Jul/2023 16:16:35] \"POST /predict HTTP/1.1\" 200 -\n",
-      "No traceback available to show.\n"
+      "127.0.0.1 - - [28/Jul/2023 15:01:22] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 200ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [28/Jul/2023 15:02:05] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 367ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [28/Jul/2023 15:02:25] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:02:29] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:02:29] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:02:29] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 188ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [28/Jul/2023 15:02:39] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:02:54] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:02:54] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:02:54] \"GET /static/css/main.css HTTP/1.1\" 304 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 193ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [28/Jul/2023 15:03:10] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 168ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [28/Jul/2023 15:04:18] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:04:21] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:04:21] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:04:21] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 209ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [28/Jul/2023 15:04:30] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 178ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [28/Jul/2023 15:04:49] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:05:53] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:05:53] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:05:53] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 200ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [28/Jul/2023 15:06:11] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:06:14] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:06:14] \"GET /static/css/main.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [28/Jul/2023 15:06:14] \"GET /static/js/main.js HTTP/1.1\" 304 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 184ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [28/Jul/2023 15:06:23] \"POST /predict HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -54,7 +198,7 @@
     "\n",
     "# Load the skin cancer classifier model\n",
     "model = load_model('models/imageclassifiers.h5')\n",
-    "allowed_classes = ['actinic keratosis','animal','basal cell carconima', 'melanoma','nevus','normal skin','pigmented benign keretosis','plants', 'squamous cell carcinoma','vascular lesion']\n",
+    "allowed_classes = ['actinic keratosis','not cancerous','basal cell carconima', 'melanoma','nevus','not cancerous','pigmented benign keretosis','not cancerous', 'squamous cell carcinoma','vascular lesion']\n",
     "\n",
     "# Define allowed file extensions\n",
     "ALLOWED_EXTENSIONS = {'jpg', 'jpeg', 'png'}\n",
