--- a/skin.ipynb
+++ b/skin.ipynb
@@ -253,7 +253,7 @@
     "\n",
     "data_dir = 'dataset'\n",
     "image_exts = ['jpeg', 'jpg', 'bmp', 'png']\n",
-    "allowed_classes =['actinic keratosis','animal','basal cell carconima', 'melanoma','nevus','normal skin','pigmented benign keretosis','plants', 'squamous cell carcinoma','vascular lesion']\n",
+    "allowed_classes =['actinic keratosis','basal cell carconima', 'melanoma','nevus','normal skin','pigmented benign keretosis', 'squamous cell carcinoma','vascular lesion']\n",
     "\n",
     "for image_class in os.listdir(data_dir):\n",
     "    if image_class not in allowed_classes:\n",
