--- a/SKCD.ipynb
+++ b/SKCD.ipynb
@@ -12,6 +12,34 @@
       " * Serving Flask app '__main__'\n",
       " * Debug mode: off\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [20/Aug/2023 13:24:56] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Aug/2023 13:24:57] \"GET /static/js/script.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Aug/2023 13:24:57] \"GET /static/js/main.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [20/Aug/2023 13:24:58] \"GET /static//css/main.css HTTP/1.1\" 308 -\n",
+      "127.0.0.1 - - [20/Aug/2023 13:24:58] \"GET /static/css/main.css HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 3s 3s/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [20/Aug/2023 13:25:21] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
     }
    ],
    "source": [
@@ -117,4 +145,13 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
